--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,8 @@
-spring.datasource.url= jdbc:mysql://localhost:3306/test
+spring.datasource.url= jdbc:mysql://121.40.110.203:3306/test
 spring.datasource.username = root
-spring.datasource.password = wuhao
+spring.datasource.password = gx123
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-#schema: database/import.sql
-#sql-script-encoding: utf-8
-
-
-spring.jpa.database=mysql
 spring.jpa.show-sql= true
-spring.jpa.ddl-auto=update
-spring.jpa.hibernate.naming.strategy=DefaultComponentSafeNamingStrategy
-spring.jpa.hibernate.properties.dialect=org.hibernate.dialect.MySQL5Dialect
-
+spring.jpa.properties.hibernate.hbm2ddl.auto=update
 spring.thymeleaf.cache = false
 spring.thymeleaf.mode = LEGACYHTML5
