--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url= jdbc:mysql://121.40.110.203:3306/test
 spring.datasource.username = root
-spring.datasource.password = gx123
+spring.datasource.password = ****
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.show-sql= true
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
